test/Fail/FunSort-X-SSet-SetOmega.err
FunSort-X-SSet-SetOmega.agda:6.13-18: error: [UnequalSorts]
Setω != funSort _3 SSet
when checking that the expression A → B has type Setω
